@@ -1,3 +1,9 @@
+2015-01-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/64778
+	* c-typeck.c (convert_arguments): Return -1 if there are
+	error_args, even if we've diagnosed too many arguments.
+
 2015-01-21  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/64313
